--- a/FreeSpeech/bin/AndroidManifest.xml
+++ b/FreeSpeech/bin/AndroidManifest.xml
@@ -29,6 +29,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name="com.kaloer.filepicker.FilePickerActivity"
+        	android:label="@string/app_name"/>
     </application>
 
 </manifest>
