Added permissions from chat added the service tag in manifest

--- a/FreeSpeech/AndroidManifest.xml
+++ b/FreeSpeech/AndroidManifest.xml
@@ -9,8 +9,31 @@
         android:targetSdkVersion="17" />
 
     <uses-permission android:name="android.permission.CAMERA" />
-	<uses-feature android:name="android.hardware.camera.front" android:required="false" />
-	
+
+    <!-- Permission required to use the TCP transport -->
+    <uses-permission android:name="android.permission.INTERNET" >
+    </uses-permission>
+    <uses-permission android:name="android.permission.CHANGE_WIFI_MULTICAST_STATE" >
+    </uses-permission>
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" >
+    </uses-permission>
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" >
+    </uses-permission>
+    <!-- Permission required to use the Bluetooth transport -->
+    <uses-permission android:name="android.permission.BLUETOOTH" >
+    </uses-permission>
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" >
+    </uses-permission>
+
+    <uses-sdk
+        android:minSdkVersion="8"
+        android:targetSdkVersion="17" />
+
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
+    <uses-feature
+        android:name="android.hardware.camera.front"
+        android:required="false" />
     <uses-feature
         android:name="android.hardware.camera"
         android:required="false" />
@@ -29,8 +52,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.kaloer.filepicker.FilePickerActivity"
-        	android:label="@string/app_name"/>
+        <activity
+            android:name="com.kaloer.filepicker.FilePickerActivity"
+            android:label="@string/app_name" />
+
+        <service android:name="AllJoynService" >
+        </service>
     </application>
 
 </manifest>
