--- a/FreeSpeech/bin/AndroidManifest.xml
+++ b/FreeSpeech/bin/AndroidManifest.xml
@@ -37,7 +37,7 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme" android:name="org.alljoyn.bus.sample.chat.ChatApplication">
         <activity
             android:name="com.freespeech.MainActivity"
             android:label="@string/app_name" >
